Fix #110 Low contrast text in footnotes strains legibility
While not a big imporvement this slighty darkens the text of footnotes.
It also helps that is a darker version of the text so it looks more consistent.

--- a/sass/_theme_rst.sass
+++ b/sass/_theme_rst.sass
@@ -163,7 +163,7 @@
   table.docutils.citation, table.docutils.footnote
     background: none
     border: none
-    color: $gray-light
+    color: $text-medium
     td, tr
       border: none
       background-color: transparent !important
